--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,24 +3,29 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <servlet>
-        <servlet-name>controller</servlet-name>
-        <servlet-class>app.servlets.ControllerServlet</servlet-class>
-    </servlet>
 
-    <servlet-mapping>
-        <servlet-name>controller</servlet-name>
-        <url-pattern>/app</url-pattern>
-    </servlet-mapping>
+    <welcome-file-list>
+        <welcome-file>controller</welcome-file>
+    </welcome-file-list>
 
-    <servlet>
-        <servlet-name>areaCheck</servlet-name>
-        <servlet-class>app.servlets.AreaCheckServlet</servlet-class>
-    </servlet>
+        <servlet>
+            <servlet-name>controller</servlet-name>
+            <servlet-class>app.servlets.ControllerServlet</servlet-class>
+        </servlet>
 
-    <servlet-mapping>
-        <servlet-name>areaCheck</servlet-name>
-        <url-pattern>/areaCheck</url-pattern>
-    </servlet-mapping>
+        <servlet-mapping>
+            <servlet-name>controller</servlet-name>
+            <url-pattern>/controller</url-pattern>
+        </servlet-mapping>
+
+        <servlet>
+            <servlet-name>areaCheck</servlet-name>
+            <servlet-class>app.servlets.AreaCheckServlet</servlet-class>
+        </servlet>
+
+        <servlet-mapping>
+            <servlet-name>areaCheck</servlet-name>
+            <url-pattern>/areaCheck</url-pattern>
+        </servlet-mapping>
 
 </web-app>
